# percy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  CHANGELOG.md  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml  recipe
.github/actions/setup-env/: action.yaml
.github/workflows/: build-linux.yml  ci.yaml  pre-commit.yml  publish.yaml
conda-recipe/: meta.yaml
conda.recipe/: meta.yaml
percy/: types.py
percy/commands/: aggregate.py  convert.py  main.py  recipe.py
percy/examples/: build_order_to_jira.py  updater.py  updater2.py
percy/examples/aggregate_deps_issue_finder/: aggregate_deps_issue_finder.py
percy/examples/blts/: gen_blts_build_order.py
percy/examples/blts/linux-64/: blts_linux-64_build_order.yaml  map_to_p.yaml
percy/examples/blts/osx-arm64/: blts_osx-arm64_build_order.yaml  map_to_p.yaml
percy/examples/feedstocks_affinity/: feedstocks_affinity.py
percy/examples/patch/: test_patch.json  test_recipe.yaml  updater.py  updater_standalone.py
percy/examples/preinstall/: conftest.py  dry_run.py  test_install.py
percy/examples/py311/: config.py  copy_311_to_www_pkgs_main.py  find_outdated_with_defaults.py  gen_python_build_order.py  out.txt  tally.sh  test_packages.sh
percy/examples/py311/linux-64/: map_to_p.yaml  (+59 more)
percy/examples/py312/: config.py  copy_to_www_pkgs_main.py  gen_python_build_order.py  test_install.py
percy/examples/py_buildorder/: README.md  config.py  copy_to_www_pkgs_main.py  find_outdated_with_defaults.py  gen_python_build_order.py  patch312.py  test_install.py  test_packages.sh
percy/parser/: _node.py  _selector_info.py  _traverse.py  _types.py  _utils.py  exceptions.py  recipe_parser.py  types.py
percy/render/: _dumper.py  _renderer.py  aggregate.py  dumper.py  exceptions.py  recipe.py  recipe_parser.py  types.py  variants.py
percy/render/parser/: _node.py  _selector_info.py  _traverse.py  _types.py  _utils.py  exceptions.py  recipe_parser.py
percy/repodata/: repodata.py
percy/tests/: test_recipe_parser.py
percy/tests/commands/: test_aggregate_cli.py  test_convert_cli.py  test_main_cli.py  test_recipe_cli.py
percy/tests/parser/: test_recipe_parser.py
percy/tests/test_aux_files/: multi-output.yaml  new_format_curl.yaml  new_format_huggingface_hub.yaml  new_format_multi-output.yaml  new_format_simple-recipe.yaml  simple-recipe.yaml  simple-recipe_multiline_strings.yaml  simple-recipe_test_add_selector.yaml  simple-recipe_test_patch_add.yaml  simple-recipe_test_patch_copy.yaml  simple-recipe_test_patch_move.yaml  simple-recipe_test_patch_remove.yaml  simple-recipe_test_patch_replace.yaml  simple-recipe_test_remove_selector.yaml  simple-recipe_test_search_and_patch.yaml  simple-recipe_to_str.out  types-toml.yaml
percy/updater/: grayskull_sync.py
scripts/: README.md  analyze_aggregate_errors.py
(+267 files in other folders)
